= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 



NNbenchmark 3.1.6 - 2020-09-07 - Submitted to CRAN
==================================================
- v_3.1.5 erased since mixed with 2019 code
- v_3.1.6 copied from v_3.1.4

NNbenchmark 3.1.4 - 2020-08-30
==============================
- timediff() updated time0 <- NA ; time0 <<- time0 detected by CRAN
- Authors@R modified: correct PK email
- Author: orcid number for PK and CD

NNbenchmark 3.1.3 - 2020-08-30
==============================
- timediff() updated time0 <<- NA
- NNSummary() and NNtrainPredict() cat(), print() modified

NNbenchmark 3.1.1 - 2020-08-26
==============================
- DESCRIPTION: add Authors@R
- clearNN() and detachNN() further simplified

NNbenchmark 3.1.0 - 2020-08-24 - Submitted to CRAN
==================================================
- change version number and sent to CRAN

NNbenchmark 3.0.7 - 2020-08-24
==============================
- simplify clearNN()
- Christophe Dutang added as author
- Email address: rpackages--@--inmodelia
- false link replaced by the table header "Packages" in README.md
- NNtrainPredict.R: odir <- tempdir() rather than getwd()

NNbenchmark 3.0.5 - 2020-07-30
==============================
- allow for nrep = 1
- added examples to NNtrainPredict
- changed echoreport to logical

NNbenchmark 3.0.4 - 2020-07-03
==============================
- remove commented traces
- add an argument to trainPredict_1mth1data()
- add mWoodG1 rda file (Simon Wood's GAM test file for Gaussian family)

NNbenchmark 3.0.3 - 2020-06-29
==============================
- NNtrainPredict now has the options for csv outputs, same as 2019 legacy code
- round time objects in NNsummary

NNbenchmark 3.0.2 - 2020-06-29
==============================
- adjusted NNtrainPredict and NNsummary functions to new timing functions


NNbenchmark 3.0.1 - 2020-06-27
==============================
- DESCRIPTION: Roxygen: list(old_usage = TRUE)