@@ -2,3 +2,6 @@
 .Rhistory
 .RData
 .Ruserdata
+.Rbuildignore
+NNenchmark.Rproj
+.gitignore
