@@ -1,4 +1,4 @@
-## a_intro = NNbenchmark-package 2019-08-04 + 2019-08-22 + 2020-08-24
+## a_intro = NNbenchmark-package 2019-08-04 + 2019-08-22 + 2020-08-24 + 2021-03-08
 
 
 
@@ -8,7 +8,8 @@
 #' dedicated to regression with neural networks (no classification in this version).
 #' The templates for the tested packages are available at 
 #' <https://github.com/pkR-pkR/NNbenchmarkTemplates> and 
-#' <https://akshajverma.com/NNbenchmarkWeb/index.html>.
+#' <https://theairbend3r.github.io/NNbenchmarkWeb/index.html>. The submitted article 
+#' to the R-Journal can be read at <https://www.inmodelia.com/gsoc2020.html>.
 #' @examples
 #' ds <- grep("^[m,u]", ls("package:NNbenchmark"), value = TRUE); ds
 #' t(sapply(ds, function(x) dim(get(x)))) 
